--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>piol.name.test</groupId>
-	<artifactId>myTest</artifactId>
+	<artifactId>my-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>myTest</name>
 	<description>Test project</description>
