--- a/springbbot-test/Containerfile
+++ b/springbbot-test/Containerfile
@@ -1,5 +1,5 @@
-#FROM openjdk:21-slim
-FROM ubi9/openjdk-21
+FROM openjdk:21-slim
+#FROM ubi9/openjdk-21
 
 USER root
 
@@ -15,6 +15,6 @@ USER mytest-user
 
 WORKDIR /myTest
 
-COPY target/my-test-0.0.1-SNAPSHOT.jar my-test.jar
+COPY target/springboot-test-*.jar springboot-test.jar
 
-ENTRYPOINT ["java", "-jar", "my-test.jar"]
+ENTRYPOINT ["java", "-jar", "springboot-test.jar"]
