--- a/springbbot-test/pom.xml
+++ b/springbbot-test/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>piol.name.test</groupId>
-	<artifactId>my-test</artifactId>
+	<groupId>piol.name.mytest</groupId>
+	<artifactId>springboot-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>myTest</name>
-	<description>Test project</description>
+	<name>Springboot-Test</name>
+	<description>Springboot Test project</description>
 
 	<properties>
 		<java.version>21</java.version>
