--- a/quarkus-test/Containerfile
+++ b/quarkus-test/Containerfile
@@ -1,4 +1,5 @@
-FROM quay.io/quarkus/quarkus-micro-image:2.0
+#FROM quay.io/quarkus/quarkus-micro-image:2.0
+FROM docker.io/fedora:latest
 
 WORKDIR /work/
 COPY target/*-runner /work/application
